# YCCL-Offload

./: README.md
YHCCL_Offload_Allreduce/GLEX_Coll_lib/: CMakeLists.txt  GenNodeFile.py  Makefile  batch-allreduce.sh  batch-alltoall.sh  batch-alltoallv.sh  batch-broadcast.sh  batch.sh  cmake_install.cmake  exclude-th3.txt  lsg_one_button_startup_all.sh  nodefile.txt  pjt_one_button_startup_all.sh  pjt_one_button_startup_all_E.sh  scp.py  th2_one_button_startup_all.sh  th3_one_button_startup_all.sh  znj_pjt_one_button_startup_all.sh
YHCCL_Offload_Allreduce/GLEX_Coll_lib/IntCompresser/: bash.txt
YHCCL_Offload_Allreduce/GLEX_Coll_lib/data_visit/: Reduce-data-process.py
YHCCL_Offload_Allreduce/GLEX_Coll_lib/include/: glexallreduce.h  glexalltoall.h  glexcoll.h
YHCCL_Offload_Allreduce/GLEX_Coll_lib/node-screening/: excludeth2  excludeth3
YHCCL_Offload_Allreduce/GLEX_Coll_lib/src/: CMakeLists.txt  Makefile  alltoall.c  cmake_install.cmake  glex_epmanager.c  glexcoll_Iallreduce.c  glexcoll_Iallreduce.c.bak  glexcoll_Init.c  glexcoll_Initallreduce.c  glexcoll_allreduce.c  glexcoll_allreduce_intra.c  glexcoll_alltoall.c  glexcoll_alltoallv.c  glexcoll_bcast.c  glexcoll_init_shm.c
YHCCL_Offload_Allreduce/GLEX_Coll_lib/test/: CMakeLists.txt  Makefile  allreduce-multipledata.cpp  alltoall-test-integer.c  alltoall-test.c  alltoallv-rdma.cpp  alltoallv-test.cpp  bcast-test.cpp  cmake_install.cmake  intra-node-performance-test.cpp  intra_node_bigMSG.c  main-double.cpp
YHCCL_Offload_Barrier/: barrier.c
YHCCL_Offload_Broadcast/: TOB.c
